--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,120 +1,352 @@
+# https://press.princeton.edu/books/hardcover/9780691177793/gravitation
 @book{misner1973gravitation,
   author = {Misner, Charles W. and Thorne, Kip S. and Wheeler, John Archibald},
   title = {Gravitation},
   year = {1973},
   publisher = {W. H. Freeman and Company},
   isbn = {978-0716703440},
-  url = {https://archive.org/details/Gravitation-Misner-Thorne-Wheeler}
 }
 
+# https://ui.adsabs.harvard.edu/abs/1975CMaPh..43..199H/abstract
 @article{hawking1975particle,
-  author = {Hawking, Stephen W.},
-  title = {Particle Creation by Black Holes},
-  journal = {Communications in Mathematical Physics},
-  volume = {43},
-  pages = {199-220},
-  year = {1975},
-  doi = {10.1007/BF02345020},
-  url = {https://projecteuclid.org/euclid.cmp/1103899181}
+       author = {{Hawking}, S.~W.},
+        title = "{Particle creation by black holes}",
+      journal = {Communications in Mathematical Physics},
+         year = 1975,
+        month = aug,
+       volume = {43},
+       number = {3},
+        pages = {199-220},
+          doi = {10.1007/BF02345020},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1975CMaPh..43..199H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{bardeen1968non,
-  author = {Bardeen, James M.},
-  title = {Non-Singular General Relativistic Gravitational Collapse},
-  journal = {Proceedings of GR5},
-  year = {1968},
-  note = {Conference presentation},
-  url = {https://inspirehep.net/literature/47217}
+# https://ui.adsabs.harvard.edu/abs/1968qtr..conf...87B/exportcitation
+@INPROCEEDINGS{bardeen1968non,
+       author = {{Bardeen}, James},
+        title = "{Non-singular general relativistic gravitational collapse}",
+    booktitle = {Proceedings of the 5th International Conference on Gravitation and the Theory of Relativity},
+         year = 1968,
+        month = sep,
+        pages = {87},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1968qtr..conf...87B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+# https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.14.57
 @article{penrose1965singularity,
-  author = {Penrose, Roger},
   title = {Gravitational Collapse and Space-Time Singularities},
-  journal = {Physical Review Letters},
+  author = {Penrose, Roger},
+  journal = {Phys. Rev. Lett.},
   volume = {14},
-  pages = {57-59},
+  issue = {3},
+  pages = {57--59},
+  numpages = {0},
   year = {1965},
-  doi = {10.1103/PhysRevLett.14.57}
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.14.57},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.14.57}
 }
 
+# https://inspirehep.net/literature/687568
 @article{hayward2006formation,
-  author = {Hayward, Sean A.},
-  title = {Formation and Evaporation of Regular Black Holes},
-  journal = {Physical Review Letters},
-  volume = {96},
-  pages = {031103},
-  year = {2006},
-  doi = {10.1103/PhysRevLett.96.031103}
+    author = "Hayward, Sean A.",
+    title = "{Formation and evaporation of regular black holes}",
+    eprint = "gr-qc/0506126",
+    archivePrefix = "arXiv",
+    doi = "10.1103/PhysRevLett.96.031103",
+    journal = "Phys. Rev. Lett.",
+    volume = "96",
+    pages = "031103",
+    year = "2006"
 }
 
+# https://pure.psu.edu/en/publications/mathematical-structure-of-loop-quantum-cosmology
 @article{ashtekar2005quantum,
+title = "Mathematical structure of loop quantum cosmology",
   author = {Ashtekar, Abhay and Bojowald, Martin and Lewandowski, Jerzy},
-  title = {Mathematical Structure of Loop Quantum Cosmology},
-  journal = {Advances in Theoretical and Mathematical Physics},
-  volume = {7},
-  pages = {233-268},
-  year = {2003},
-  doi = {10.4310/ATMP.2003.v7.n2.a2}
+  year = "2003",
+  month = mar,
+  doi = "10.4310/ATMP.2003.v7.n2.a2",
+  language = "English (US)",
+  volume = "7",
+  pages = "233--268",
+  journal = "Advances in Theoretical and Mathematical Physics",
+  issn = "1095-0761",
+  publisher = "International Press, Inc.",
+  number = "2",
 }
 
+# https://inspirehep.net/literature/417250
 @article{rovelli1996black,
-  author = {Rovelli, Carlo and Smolin, Lee},
-  title = {Black Hole Entropy in Loop Quantum Gravity},
-  journal = {Nuclear Physics B},
-  volume = {442},
-  number = {3},
-  pages = {593-619},
+  title = {Black Hole Entropy from Loop Quantum Gravity},
+  author = {Rovelli, Carlo},
+  journal = {Phys. Rev. Lett.},
+  volume = {77},
+  issue = {16},
+  pages = {3288--3291},
+  numpages = {0},
   year = {1996},
-  doi = {10.1016/0550-3213(95)00652-3}
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.77.3288},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.77.3288}
 }
 
+# https://journals.aps.org/prd/abstract/10.1103/PhysRevD.94.104056
 @article{frolov2017information,
+  title = {Notes on nonsingular models of black holes},
   author = {Frolov, Valeri P.},
-  title = {Notes on Non-Singular Models of Black Holes},
-  journal = {Physical Review D},
+  journal = {Phys. Rev. D},
   volume = {94},
+  issue = {10},
   pages = {104056},
+  numpages = {12},
   year = {2016},
-  doi = {10.1103/PhysRevD.94.104056}
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.94.104056},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.94.104056}
 }
 
-@article{giddings1992black,
-  author = {Giddings, Steven B.},
-  title = {Black Holes and Quantum Information},
-  journal = {Physical Review D},
-  volume = {46},
-  pages = {1347-1352},
-  year = {1992},
-  doi = {10.1103/PhysRevD.46.1347}
-}
-
+# https://arxiv.org/abs/gr-qc/0506128
 @article{bojowald2005nonsingular,
-  author = {Bojowald, Martin},
-  title = {Nonsingular Black Holes and Loop Quantum Gravity},
-  journal = {Classical and Quantum Gravity},
-  volume = {23},
-  pages = {391-411},
-  year = {2005},
-  doi = {10.1088/0264-9381/23/12/008}
-}
+   title={Nonsingular Black Holes and Degrees of Freedom in Quantum Gravity},
+   volume={95},
+   ISSN={1079-7114},
+   url={http://dx.doi.org/10.1103/PhysRevLett.95.061301},
+   DOI={10.1103/physrevlett.95.061301},
+   number={6},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Bojowald, Martin},
+   year={2005},
+   month=aug }
 
+
+# https://arxiv.org/abs/1505.07131
 @article{brustein2018black,
-  author = {Brustein, Ram and Medved, A. J. M.},
-  title = {Black Hole Interior in Quantum Gravity and the Information Paradox},
-  journal = {Fortschritte der Physik},
-  volume = {67},
-  number = {10},
-  pages = {1800056},
-  year = {2018},
-  doi = {10.1002/prop.201800056}
+   title={Quantum state of the black hole interior},
+   volume={2015},
+   ISSN={1029-8479},
+   url={http://dx.doi.org/10.1007/JHEP08(2015)082},
+   DOI={10.1007/jhep08(2015)082},
+   number={8},
+   journal={Journal of High Energy Physics},
+   publisher={Springer Science and Business Media LLC},
+   author={Brustein, Ram and Medved, A. J. M.},
+   year={2015},
+   month=aug }
+
+# https://arxiv.org/abs/2312.00841
+@misc{kerr2023singularities,
+      title={Do Black Holes have Singularities?}, 
+      author={R. P. Kerr},
+      year={2023},
+      eprint={2312.00841},
+      archivePrefix={arXiv},
+      primaryClass={gr-qc},
+      url={https://arxiv.org/abs/2312.00841}, 
 }
 
-@article{kerr2023singularities,
-  author = {R. P. Kerr},
-  title = {Do Black Holes have Singularities?},
-  journal = {Preprint},
+# https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.21.562
+@article{Parker1968,
+  title = {Particle Creation in Expanding Universes},
+  author = {Parker, L.},
+  journal = {Phys. Rev. Lett.},
+  volume = {21},
+  issue = {8},
+  pages = {562--564},
+  numpages = {0},
+  year = {1968},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.21.562},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.21.562}
+}
+
+# https://journals.aps.org/prd/abstract/10.1103/PhysRevD.14.870
+@article{Unruh1976,
+  title = {Notes on black-hole evaporation},
+  author = {Unruh, W. G.},
+  journal = {Phys. Rev. D},
+  volume = {14},
+  issue = {4},
+  pages = {870--892},
+  numpages = {0},
+  year = {1976},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.14.870},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.14.870}
+}
+
+# https://inspirehep.net/literature/181166
+@book{BirrellDavies1982,
+    author = "Birrell, N. D. and Davies, P. C. W.",
+    title = "{Quantum Fields in Curved Space}",
+    doi = "10.1017/CBO9780511622632",
+    isbn = "978-0-511-62263-2, 978-0-521-27858-4",
+    publisher = "Cambridge University Press",
+    address = "Cambridge, UK",
+    series = "Cambridge Monographs on Mathematical Physics",
+    year = "1982"
+}
+
+# https://iopscience.iop.org/article/10.1088/0264-9381/28/12/125021
+@article{Barbado2011,
+doi = {10.1088/0264-9381/28/12/125021},
+url = {https://dx.doi.org/10.1088/0264-9381/28/12/125021},
+year = {2011},
+month = {may},
+publisher = {},
+volume = {28},
+number = {12},
+pages = {125021},
+author = {Barbado, L C and Barcel\'o, C and Garay, L J},
+title = {Hawking radiation as perceived by different observers},
+journal = {Classical and Quantum Gravity},
+}
+
+# https://journals.aps.org/prd/abstract/10.1103/PhysRevD.17.946
+@article{Christensen1978,
+  title = {Regularization, renormalization, and covariant geodesic point separation},
+  author = {Christensen, S. M.},
+  journal = {Phys. Rev. D},
+  volume = {17},
+  issue = {4},
+  pages = {946--963},
+  numpages = {0},
+  year = {1978},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.17.946},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.17.946}
+}
+
+# https://journals.aps.org/prd/abstract/10.1103/PhysRevD.51.4337
+@article{AndersonHiscockSamuel1995,
+  title = {Stress-energy tensor of quantized scalar fields in static spherically symmetric spacetimes},
+  author = {Anderson, Paul R. and Hiscock, William A. and Samuel, David A.},
+  journal = {Phys. Rev. D},
+  volume = {51},
+  issue = {8},
+  pages = {4337--4358},
+  numpages = {0},
+  year = {1995},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.51.4337},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.51.4337}
+}
+
+# https://journals.aps.org/prd/abstract/10.1103/PhysRevD.107.024005
+@article{Bonanno2023RegularBH,
+  title = {Regular evaporating black holes with stable cores},
+  author = {Bonanno, Alfio and Khosravi, Amir-Pouyan and Saueressig, Frank},
+  journal = {Phys. Rev. D},
+  volume = {107},
+  issue = {2},
+  pages = {024005},
+  numpages = {17},
   year = {2023},
-  month = {November},
-  doi = {10.13140/RG.2.2.34286.38723},
-  url = {https://www.researchgate.net/publication/375744216_Do_Black_Holes_have_Singularities}
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.107.024005},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.107.024005}
+}
+
+# https://journals.aps.org/pr/abstract/10.1103/PhysRev.108.1063
+@article{ReggeWheeler1957,
+  title = {Stability of a Schwarzschild Singularity},
+  author = {Regge, Tullio and Wheeler, John A.},
+  journal = {Phys. Rev.},
+  volume = {108},
+  issue = {4},
+  pages = {1063--1069},
+  numpages = {0},
+  year = {1957},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.108.1063},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.108.1063}
+}
+
+# https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.24.737
+@article{Zerilli1970,
+  title = {Effective Potential for Even-Parity Regge-Wheeler Gravitational Perturbation Equations},
+  author = {Zerilli, Frank J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {24},
+  issue = {13},
+  pages = {737--738},
+  numpages = {0},
+  year = {1970},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.24.737},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.24.737}
+}
+
+# https://arxiv.org/abs/1506.02210
+@misc{Woodard2015Ostro,
+      title={The Theorem of Ostrogradsky}, 
+      author={R. P. Woodard},
+      year={2015},
+      eprint={1506.02210},
+      archivePrefix={arXiv},
+      primaryClass={hep-th},
+      url={https://arxiv.org/abs/1506.02210}, 
+}
+
+
+# https://journals.aps.org/prd/abstract/10.1103/PhysRevD.98.124009
+@article{CarballoRubio2018,
+  title = {Phenomenological aspects of black holes beyond general relativity},
+  author = {Carballo-Rubio, Ra\'ul and Di Filippo, Francesco and Liberati, Stefano and Visser, Matt},
+  journal = {Phys. Rev. D},
+  volume = {98},
+  issue = {12},
+  pages = {124009},
+  numpages = {27},
+  year = {2018},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.98.124009},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.98.124009}
+}
+
+# https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.116.171101
+@article{Cardoso2016Echoes,
+  title = {Is the Gravitational-Wave Ringdown a Probe of the Event Horizon?},
+  author = {Cardoso, Vitor and Franzin, Edgardo and Pani, Paolo},
+  journal = {Phys. Rev. Lett.},
+  volume = {116},
+  issue = {17},
+  pages = {171101},
+  numpages = {6},
+  year = {2016},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.116.171101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.116.171101}
+}
+
+# https://iopscience.iop.org/article/10.1088/1361-6382/aacb8f
+@article{Pani2018,
+  doi = {10.1088/1361-6382/aacb8f},
+  url = {https://dx.doi.org/10.1088/1361-6382/aacb8f},
+  year = {2018},
+  month = {jun},
+  publisher = {IOP Publishing},
+  volume = {35},
+  number = {15},
+  pages = {15LT01},
+  author = {Pani, Paolo and Ferrari, Valeria},
+  title = {On gravitational-wave echoes from neutron-star binary coalescences},
+  journal = {Classical and Quantum Gravity},
+  abstract = {A tentative detection of gravitational-wave echoes in the post-merger signal of GW170817 has been recently claimed at  significance level. It has been speculated that the signal might provide evidence for near-horizon quantum structures in the remnant exotic object. We point out that if the remnant object is an ultracompact neutron star, echoes are expected for objects with radius only slightly smaller than that of an ordinary neutron star. The reported echoes at  ≈72 Hz are compatible with a toy model of incompressible star with mass approximately  and radius close to the Buchdahl limit, . If confirmed, low-frequency gravitational-wave echoes would be in tension with all current neutron-star models and would have dramatic implications for nuclear physics and gravity.}
 }
