--- a/paper/sections/conclusions_future_work.tex
+++ b/paper/sections/conclusions_future_work.tex
@@ -30,7 +30,7 @@ While the proposed model offers an interesting conceptual framework, several ope
 \begin{enumerate}
     \item \textbf{First-Principles Derivation of Radiation Emission:} The function \( f(\mathcal{R}) \), which governs radiation as a function of curvature, needs to be rigorously derived from quantum field theory in curved spacetime or an appropriate quantum gravity framework.
     
-    \item \textbf{Stability Analysis and Numerical Simulations:} The stability of the equilibrium core must be tested through numerical simulations of Einstein’s equations coupled with radiation backreaction. Both linear and nonlinear perturbations should be analyzed to determine whether the core remains dynamically stable.
+    \item \textbf{Stability Analysis and Numerical Simulations:} The stability of the equilibrium core must be tested through numerical simulations of Einstein's equations coupled with radiation backreaction. Both linear and nonlinear perturbations should be analyzed to determine whether the core remains dynamically stable.
 
     \item \textbf{Modified Einstein Equations:} The effective energy-momentum tensor for the core must be identified to correctly model quantum effects on classical spacetime dynamics. Backreaction of local radiation on the metric must also be incorporated.
     
