--- a/paper/sections/core_hypothesis.tex
+++ b/paper/sections/core_hypothesis.tex
@@ -70,7 +70,7 @@ If equilibrium is achieved, the black hole interior does not collapse into a sin
 
 This implies:
 \begin{itemize}
-    \item A finite energy density, satisfying Einstein’s equation:
+    \item A finite energy density, satisfying Einstein's equation:
     \begin{equation}
         \mathcal{R}_c \sim 8\pi G \rho_c.
     \end{equation}
