--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -2,9 +2,9 @@
 
 This paper presents a speculative exploration of black hole interiors. While we aim to formalize our ideas rigorously, this is not a complete theory but rather a preliminary conceptual framework for discussion. Many of the assumptions in this model remain speculative, and a full derivation from fundamental physics is not yet available. Our goal is to propose a mechanism that challenges the classical view of black hole interiors and provides a basis for future theoretical investigation.
 
-Black holes have long been a cornerstone of theoretical physics, serving as natural laboratories for testing general relativity and quantum mechanics. The classical view, derived from Einstein’s field equations, predicts that the interior of a black hole inevitably collapses into a singularity—a region of infinite curvature where known physics breaks down \cite{penrose1965singularity}. However, the incorporation of quantum effects into black hole physics suggests that this picture may be incomplete.
+Black holes have long been a cornerstone of theoretical physics, serving as natural laboratories for testing general relativity and quantum mechanics. The classical view, derived from Einstein's field equations, predicts that the interior of a black hole inevitably collapses into a singularity—a region of infinite curvature where known physics breaks down \cite{penrose1965singularity}. However, the incorporation of quantum effects into black hole physics suggests that this picture may be incomplete.
 
-Hawking’s seminal discovery of black hole radiation \cite{hawking1975particle} provided the first indication that quantum effects modify black hole behavior. In the standard view, Hawking radiation originates from vacuum fluctuations near the event horizon, leading to gradual mass loss and, eventually, black hole evaporation. While this process alters the long-term evolution of black holes, it does not address the problem of singularity formation within the interior.
+Hawking's seminal discovery of black hole radiation \cite{hawking1975particle} provided the first indication that quantum effects modify black hole behavior. In the standard view, Hawking radiation originates from vacuum fluctuations near the event horizon, leading to gradual mass loss and, eventually, black hole evaporation. While this process alters the long-term evolution of black holes, it does not address the problem of singularity formation within the interior.
 
 Several alternative proposals have attempted to resolve the singularity problem. Some models replace the singularity with a quantum gravitational "bounce" \cite{bojowald2005nonsingular}, while others suggest that black holes may transition into exotic compact objects at late stages of evaporation \cite{frolov2017information}. Another class of models considers the possibility of non-singular, regular black holes, such as those first proposed by Bardeen \cite{bardeen1968non} and later explored in various forms \cite{hayward2006formation}.
 
