--- a/paper/sections/stability_open_questions.tex
+++ b/paper/sections/stability_open_questions.tex
@@ -29,7 +29,7 @@ If \( \lambda > 0 \), perturbations decay over time, suggesting stability. If \(
 The value of \( \lambda \) depends on the radiation response function \( f(\mathcal{R}) \). If radiation increases strongly with curvature, perturbations should be suppressed. However, if radiation saturates or responds too weakly, the system may be prone to instabilities.
 
 \subsubsection{Energy Density Stability}
-Since curvature and energy density are linked by Einstein’s equations, perturbations in \( \rho \) also affect stability. The key question is whether energy density perturbations reinforce equilibrium or cause runaway behavior.
+Since curvature and energy density are linked by Einstein's equations, perturbations in \( \rho \) also affect stability. The key question is whether energy density perturbations reinforce equilibrium or cause runaway behavior.
 
 We define:
 \begin{equation}
@@ -59,7 +59,7 @@ One of the major unresolved problems in black hole physics is the fate of inform
     \item The core itself could act as a quantum remnant, preventing information loss.
     \item Information may be redistributed internally but remain inaccessible from the exterior.
 \end{enumerate}
-Determining the core’s role in information flow requires an explicit quantum description of the interior radiation process. This remains an open problem, as no fully developed theory of black hole interiors currently resolves the information paradox unambiguously.
+Determining the core's role in information flow requires an explicit quantum description of the interior radiation process. This remains an open problem, as no fully developed theory of black hole interiors currently resolves the information paradox unambiguously.
 
 \subsection{Late-Stage Evolution and Possible Remnants}
 As the black hole loses mass due to Hawking radiation, the equilibrium core should dynamically adjust. Possible end states include:
