--- a/paper/towards_non_singular_black_holes.tex
+++ b/paper/towards_non_singular_black_holes.tex
@@ -2,6 +2,10 @@
 
 % Packages
 \usepackage{amsmath, amssymb, amsfonts, graphicx, hyperref, geometry, cite}
+\usepackage{enumitem}
+\usepackage{caption}
+\usepackage{subcaption}
+
 \geometry{a4paper, margin=1in}
 
 % Title Information
@@ -22,19 +26,21 @@ Classical general relativity predicts that black holes contain a central singula
 % \newpage
 
 % Introduction
-\input{sections/introduction.tex}
+\input{sections/introduction_v2.tex}
 
 % Core Hypothesis
-\input{sections/core_hypothesis.tex}
+% \input{sections/core_hypothesis.tex}
+\input{sections/interior_quantum_feedback.tex}
 
 % Mathematical Framework
-\input{sections/mathematical_framework.tex}
+% \input{sections/mathematical_framework.tex}
+\input{sections/semiclassical_backreaction.tex}
 
 % Stability and Open Questions
-\input{sections/stability_open_questions.tex}
+\input{sections/stability_open_questions_v2.tex}
 
 % Conclusions and Future Work
-\input{sections/conclusions_future_work.tex}
+\input{sections/conclusions_future_work_v2.tex}
 
 % Acknowledgments
 \input{sections/ai_acknowledgment.tex}
