minor edits. removing appendix mention. removing em or en dash.

--- a/paper/sections/semiclassical_backreaction.tex
+++ b/paper/sections/semiclassical_backreaction.tex
@@ -156,7 +156,7 @@ or an equation of state \(p\approx-\,\rho\) - so that
     solid blue curve includes anomaly and emission
     terms \emph{proportional} to the classical curvature,
     and thus remains a power law - it never flattens to
-    a plateau.  By contrast, a bona fide non‐singular core
+    a plateau.  By contrast, a bona fide non-singular core
     requires a \emph{nonlinear} or saturating back-reaction
     (e.g.\ \(\rho_{\rm anom}\to{\rm const.}\) or
     \(p\to-\,\rho\)) so that curvature growth is truly
@@ -209,7 +209,7 @@ independent of any residual \(r^{-6}\) tail.  If \(\rho_0\) itself arises from a
   K_c\propto K_{\rm th}\,,\qquad
   r_c\propto M^{1/3}\,K_{\rm th}^{-1/6}\,.
 \]
-Thus astrophysical black holes develop Planck-curvature cores (\(K_c\sim M_{\rm P}^4\)) of proper radius parametrically larger than \(\ell_{\rm P}\) yet negligible compared with the Schwarzschild radius.  A full exploration of the \(C\)-\(N\)-\(\varepsilon\) parameter space is given in Appendix~C.
+Thus astrophysical black holes develop Planck-curvature cores (\(K_c\sim M_{\rm P}^4\)) of proper radius parametrically larger than \(\ell_{\rm P}\) yet negligible compared with the Schwarzschild radius.
 % -------------------------------------------------
 \subsection{Shell-by-shell evaporation perspective}
 \label{sec:shell_evap}
@@ -222,7 +222,7 @@ so that shells closer to the center (with smaller \(M(r)\)) radiate—and back-r
 
 While appealing, this \emph{linear}, shell-by-shell ansatz simply rescales the classical \(K\propto r^{-6}\) tail and \emph{never} produces a true core plateau, as shown in Section~\ref{sec:numeric}.  It highlights that a proportional evaporation rate cannot saturate the curvature growth: the inner shells indeed evaporate faster, but only enough to delay the singular behavior rather than to arrest it.  
 
-To realize a truly non‑singular core, the shell‑by‑shell evaporation—or equivalently the effective quantum stress—must \emph{saturate} once the curvature exceeds a critical threshold.  Equivalently, the emission law should be replaced by a genuinely \emph{nonlinear} function of the Kretschmann scalar:
+To realize a truly non-singular core, the shell-by-shell evaporation—or equivalently the effective quantum stress—must \emph{saturate} once the curvature exceeds a critical threshold.  Equivalently, the emission law should be replaced by a genuinely \emph{nonlinear} function of the Kretschmann scalar:
 \[
   \Gamma_H(r)\;=\;\mathcal{F}\bigl(K(r)\bigr),
   \quad
